test_scores/negative_dimers/features/Q9P0B6.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/Q9P0B6.pkl.xz